# mmd-js

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE.md  README.md  binding.gyp  index.d.ts  index.html  index.js  index.ts  mmd.cpp  mmd.wasm.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  types.js  types.ts  wasm.d.ts  wasm.js  wasm.ts
.github/workflows/: ci.yml  release.yml
cmake/: patch-mmd7-emscripten.cmake
demo/: next.config.mjs  package.json  pnpm-lock.yaml
demo/public/: mmd.wasm  mmd.wasm.js
demo/scripts/: prepare-local-mmd.mjs  smoke-demo.mjs  verify-local-mmd.mjs
demo/src/app/: layout.tsx  page.tsx
prebuilds/linux-x64/: node.napi.node
scripts/: check-napi-prebuild.mjs  copy-napi-prebuild.mjs  prepare-installed-package.mjs
tests/: browser-wasm-smoke.test.mjs  mmd6-integrated.test.mjs  mmd7-integrated.test.mjs  package-smoke.mjs  update-mmd6-integrated-snapshot.mjs
tests/fixtures/: mmd6-integrated.snapshot.json
tests/fixtures/mmd7/: Integrated.ast  Integrated.text
tests/helpers/: normalize-node.mjs  normalize-token.mjs  parse-mmd7-ast.mjs
